--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "build:dev": "npm run build -- --mode=development --watch",
-    "start:dev": "nodemon server"
+    "start:dev": "npm run build:dev & nodemon server --ignore src/ --ignore dist/"
   },
   "keywords": [],
   "author": "",
